--- a/css/style.css
+++ b/css/style.css
@@ -1,2 +1,2 @@
-h1{color:#ffdab9}
+body .game-board{display:flex;max-width:640px;border:1px solid green;margin:0 auto}body .game-board .column{flex:1}body .game-board .row{height:80px;border:1px solid green}body h1{color:red}
 /*# sourceMappingURL=style.css.map */
