--- a/scss/style.scss
+++ b/scss/style.scss
@@ -16,10 +16,13 @@ body {
       height: 80px;
       border: 2px solid green;
       display: flex;
+      justify-content: center;
+      align-items: center;
     }
 
     .dot{
-      width: 100%;
+      width: 95%;
+      height: 95%;
       border-radius: 50%;
       background: red;
     }
