fixed the find square function and added the first 4 circles

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -20,7 +20,7 @@ body {
       align-items: center;
     }
 
-    .dot{
+    .disk{
       width: 95%;
       height: 95%;
       border-radius: 50%;
