--- a/scss/style.scss
+++ b/scss/style.scss
@@ -24,13 +24,10 @@ body {
       width: 95%;
       height: 95%;
       border-radius: 50%;
-      background: red;
+    } .red {
+      background: crimson;
+    } .black {
+      background: black;
     }
   }
-
-  h1 {
-    color: red;
-  }
-
-
 }
