--- a/scss/style.scss
+++ b/scss/style.scss
@@ -3,6 +3,8 @@
   to {opacity: 1;}
 }
 
+$border-color: #4b4b4b;
+
 body {
   img {
     width: 10%;
@@ -10,7 +12,7 @@ body {
   .game-board {
     display: flex;
     max-width: 640px;
-    border: 3px solid green;
+    border: 3px solid $border-color;
     margin: 0 auto;
 
     .column {
@@ -19,7 +21,7 @@ body {
 
     .row {
       height: 80px;
-      border: 2px solid green;
+      border: 2px solid $border-color;
       display: flex;
       justify-content: center;
       align-items: center;
@@ -35,7 +37,7 @@ body {
     } .red {
       background-color: crimson;
     } .black {
-      background-color: black;
+      background-color: $border-color;
     }
   }
 }
