--- a/scss/style.scss
+++ b/scss/style.scss
@@ -4,6 +4,7 @@
 }
 
 $border-color: #4b4b4b;
+$height: 70px;
 
 body {
   img {
@@ -11,7 +12,9 @@ body {
   }
   .game-board {
     display: flex;
-    max-width: 640px;
+    max-width: calc(#{$height} * 8)
+
+    ;
     border: 3px solid $border-color;
     margin: 0 auto;
 
@@ -20,7 +23,7 @@ body {
     }
 
     .row {
-      height: 80px;
+      height: $height;
       border: 2px solid $border-color;
       display: flex;
       justify-content: center;
