--- a/scss/style.scss
+++ b/scss/style.scss
@@ -76,5 +76,19 @@ body {
         background-color: $border-color;
       }
     }
+    .button {
+      margin: 20px auto;
+      padding: 8px;
+      display: block;
+      // background-color: $border-color;
+      border: 1px solid $border-color;
+      color: crimson;
+      font-family: 'Oswald', sans-serif;
+      font-weight: 400;
+      font-size: 18px;
+      &:hover{
+        padding: 9px;
+      }
+    }
   }
 }
