--- a/scss/style.scss
+++ b/scss/style.scss
@@ -43,7 +43,7 @@ body {
         img.active {
           visibility: visible;
           animation-name: fadeIn;
-          animation-duration: 5s;
+          animation-duration: 10ms;
         }
       }
     }
