--- a/scss/style.scss
+++ b/scss/style.scss
@@ -21,34 +21,54 @@ body {
   main {
     width: calc((#{$height} * 8) + 6px);
     margin: 0 auto;
+    .game {
+      display: none;
+      &.active {
+        display: block;
+      }
+    }
+
+    .start {
+      display: none;
+      margin: 150px auto;
+      text-align: center;
+      &.active {
+        display: block;
+      }
+      .buttons {
+        display: flex;
+      }
+    }
+
     .winner {
       padding: 20px;
       text-align: center;
       width: 100%;
       display: none;
-    }
-    .winner.active {
-      display: block
-    }
-    .score.active {
-      display: flex;
-      justify-content: space-between;
-      .turn{
-        padding: 20px;
-        display: flex;
-        img {
-          height: 30px;
-          visibility: hidden;
-        }
-        img.active {
-          visibility: visible;
-          animation-name: fadeIn;
-          animation-duration: 10ms;
-        }
+      &.active {
+        display: block;
       }
     }
+    
     .score {
       display: none;
+      &.active {
+        display: flex;
+        justify-content: space-between;
+        .turn{
+          padding: 20px;
+          display: flex;
+          img {
+            height: 30px;
+            visibility: hidden;
+          }
+          img.active {
+            visibility: visible;
+            animation-name: fadeIn;
+            animation-duration: 10ms;
+          }
+        }
+      }
     }
 
     .game-board {
