--- a/scss/style.scss
+++ b/scss/style.scss
@@ -3,6 +3,11 @@
   to {opacity: 1;}
 }
 
+@keyframes fadeOut {
+  from {opacity: 0.75;}
+  to {opacity: 0}
+}
+
 $border-color: #4b4b4b;
 $height: 60px;
 
@@ -49,7 +54,7 @@ body {
         display: block;
       }
     }
-    
+
     .score {
       display: none;
       &.active {
@@ -94,6 +99,10 @@ body {
         background-color: crimson;
       } .black {
         background-color: $border-color;
+      } .grey {
+        background-color: lightgrey;
+        animation-name: fadeIn;
+        animation-name: fadeOut
       }
     }
     .button {
